<resources>
    <string name="app_name">Habitrac</string>
    <string name="AD_App_ID" translatable="false">ca-app-pub-1329542702858699~9661424176</string>
    <string name="AD_Banner_ID" translatable="false">ca-app-pub-1329542702858699/1745560079</string>
    <string name="AD_Interstitial_ID" translatable="false">ca-app-pub-1329542702858699/7681209193</string>
    <string name="privacy">Al continuar, aceptas los <u>Términos de Servicio</u> y la <u>Política de Privacidad</u></string>
    <string name="hello_blank_fragment">Hola fragmento en blanco</string>
    <string name="routines">1. Anota tus objetivos\n2. Anota tus objetivos\n3. Anota tus objetivos\n…</string>
    <string name="pro_desc">🔓 <b>Libre de anuncios para siempre</b>: Di adiós a los anuncios para siempre. \n\n⚡ <b>Soporte prioritario</b>: Obtén asistencia de primera clase siempre que la necesites.</string>
    <string name="create_your_routine_from_a_template_or_start_with_a_custom_one">Crea tu rutina a partir de una plantilla o comienza con una personalizada</string>
    <string name="custom_routine">Hábito personalizado</string>
    <string name="suggested_routines">Hábitoa sugeridos</string>
    <string name="start_the_day_energized">Comienza el día lleno de energía</string>
    <string name="morning_routine">Nuevo hábito</string>
    <string name="evening_routine">Nuevo reto</string>
    <string name="get_better_sleep">Mejora tu sueño</string>
    <string name="study_routine">Hábito de estudio</string>
    <string name="better_focus_while_studying">Mejora tu enfoque mientras estudias</string>
    <string name="selfcare_routine">Hábito de autocuidado</string>
    <string name="improve_your_mental_health">Mejora tu salud mental</string>
    <string name="ready_for_work_routine">Preparado para la rutina de trabajo</string>
    <string name="get_more_done_with_a_ritual">Haz más con un ritual</string>
    <string name="name">Nombre</string>
    <string name="custom_step">Paso personalizado</string>
    <string name="time">Tiempo</string>
    <string name="or">o</string>
    <string name="no_explicit_time">Sin hora específica</string>
    <string name="save_step">Guardar paso</string>
    <string name="amazing_job">¡Trabajo increíble!</string>
    <string name="you_have_completed_your_today_s_routine">Has completado tu rutina de hoy</string>
    <string name="number_of_steps_you_completed">Número de pasos completados</string>
    <string name="total_time">Tiempo total</string>
    <string name="done">Hecho</string>
    <string name="routine_name">Nombre de la rutina</string>
    <string name="add_context">Agregar contexto</string>
    <string name="pick_from_library_or_create_a_custom">Elegir de la biblioteca o crear un paso personalizado</string>
    <string name="wake_up_in_the_morning">Despierta por la mañana</string>
    <string name="days">Días</string>
    <string name="reminder_timer">Temporizador de recordatorio</string>
    <string name="add_time">Agregar tiempo</string>
    <string name="create_new_steps">Crear nuevos pasos</string>
    <string name="pick_from_library_of_steps_or_create_a_custom_step">Elegir de la biblioteca de pasos o crear un paso personalizado</string>
    <string name="save">Guardar</string>
    <string name="update">Actualizar</string>
    <string name="enter_your_email_to_get_the_link_to_recover_password">Ingresa tu correo electrónico para obtener el enlace para recuperar la contraseña</string>
    <string name="e_mail">Correo electrónico</string>
    <string name="next">Siguiente</string>
    <string name="choose_you_language">Elige tu idioma</string>
    <string name="pick_one">Seleccionar uno</string>
    <string name="password">Contraseña</string>
    <string name="i_forgot_my_password">Olvidé mi contraseña</string>
    <string name="don_t_have_account_let_s_create">¿No tienes cuenta? Creémosla</string>
    <string name="cancel_anytime">Cancelar en cualquier momento</string>
    <string name="ready_to_seize_the_opportunity_tap_upgrade_now_and_embark_on_a_limitless_journey_with_us">¿Listo para aprovechar la oportunidad? Toca \'Actualizar ahora\' y emprende un viaje ilimitado con nosotros.</string>
    <string name="upgrade_now">Actualizar ahora</string>
    <string name="unleash_the_full_experience">Desata la experiencia completa</string>
    <string name="ad_free_and_premium_features_await">¡Sin anuncios y funciones premium te esperan!</string>
    <string name="pros_of_becoming_a_member">Ventajas de ser miembro</string>
    <string name="supercharge_your_experience_with_our">Potencia tu experiencia con nuestro</string>
    <string name="monthly_subscription">Suscripción mensual</string>
    <string name="elevate_your_experience_with_a">Mejora tu experiencia con una</string>
    <string name="lifetime_subscription">Suscripción Anual</string>
    <string name="edit_t">Editar\t</string>
    <string name="if_you_start_now">Si comienzas ahora</string>
    <string name="last_7_days">Últimos 7 días</string>
    <string name="share_routine_t">Compartir rutina\t</string>
    <string name="start">Iniciar</string>
    <string name="how_can_we_help_you">¿Cómo podemos ayudarte?</string>
    <string name="stop_procrastinating">Deja de procrastinar</string>
    <string name="manage_adhd_related_routine">Gestiona la rutina relacionada con el TDAH</string>
    <string name="have_a_better_morning_routine">Ten una mejor rutina matutina</string>
    <string name="focus_on_my_tasks_better">Enfoca mejor mis tareas</string>
    <string name="build_better_habits">Desarrolla mejores hábitos</string>
    <string name="something_else_other">Otra cosa / Otro</string>
    <string name="app_setting">Configuración de la aplicación</string>
    <string name="enable_dark_mode">Activar el modo oscuro</string>
    <string name="color_palette">Paleta de colores</string>
    <string name="change_language">Cambiar idioma</string>
    <string name="default_language">Idioma predeterminado</string>
    <string name="routines_setting">Configuración de rutinas</string>
    <string name="show_24h_time">Mostrar hora de 24 horas</string>
    <string name="remove_ads">Eliminar anuncios</string>
    <string name="go_pro">Ir a Pro</string>
    <string name="contact_us">Contáctanos</string>
    <string name="email_example_gmail_com">Correo electrónico: contacto@ikervitoria.com</string>
    <string name="your_1_sentence_is_something_to_us">Tu frase es importante para nosotros</string>
    <string name="follow_us_example">Síguenos en @ikervitoriapsicologo</string>
    <string name="your_1_follow_help_us_to_motivate">Tu seguimiento nos ayuda a motivarnos</string>
    <string name="faqs">Preguntas frecuentes</string>
    <string name="how_to_duplicate_a_routine">¿Cómo duplicar una rutina?</string>
    <string name="full_name">Nombre completo</string>
    <string name="already_have_account_sign_in">¿Ya tienes una cuenta? Iniciar sesión</string>
    <string name="now">Ahora</string>
    <string name="next_step">Siguiente paso</string>
    <string name="info">Información.</string>
    <string name="routine_finished_approximately_at">Rutina finalizada aproximadamente a las:</string>
    <string name="remaining_steps">Pasos restantes:</string>
    <string name="reset_timer">Reiniciar</string>
    <string name="skip">Saltar</string>
    <string name="improve_your_routine">Mejora tu rutina</string>
    <string name="change_your_life_by_slowly_adding_new_healthy_habits_and_sticking_to_them">Cambia tu vida agregando lentamente nuevos hábitos saludables y manteniéndolos.</string>
    <string name="continue_with_e_mail">Continuar con correo electrónico</string>
    <string name="please_wait">Por favor espera…</string>
    <string name="edit_last_7_days">Editar últimos 7 días</string>
    <string name="if_you_forgot_to_mark_your_routine_as_completed_you_can_change_it_here">Si olvidaste marcar tu rutina como completada, puedes cambiarla aquí.</string>
    <string name="english">Inglés</string>
    <string name="spanish">Español</string>
    <string name="going_pretty_good">¡Vas muy bien!</string>
    <string name="sunday_routines">Actividades del Domingo</string>
    <string name="monday_routines">Actividades del Lunes</string>
    <string name="tuesday_routines">Actividades del Martes</string>
    <string name="wednesday_routines">Actividades del Miércoles</string>
    <string name="thursday_routines">Actividades del Jueves</string>
    <string name="friday_routines">Actividades del Viernes</string>
    <string name="saturday_routines">Actividades del Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sun">Dom</string>
    <string name="mon">Lun</string>
    <string name="tue">Mar</string>
    <string name="wed">Mié</string>
    <string name="thu">Jue</string>
    <string name="fri">Vie</string>
    <string name="sat">Sáb</string>
    <string name="today_routines">Actividades del día</string>
    <string name="routines_followed">Hábitos Completados</string>
    <string name="add_routine">Agregar Hábito/Reto</string>
    <string name="add_custom_sep">Agregar Separador Personalizado</string>
    <string name="no_reminder">Sin recordatorio</string>
    <string name="add">Agregar</string>
    <string name="select_time">Seleccionar Hora</string>
    <string name="edit_routine">Editar Hábito</string>
    <string name="delete_routine">Eliminar Hábito</string>
    <string name="do_you_really_want_to_delete_this_routine">¿Realmente quieres eliminar este Hábito?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="please_add_name_for_the_routine">Por favor agregue el nombre de l Hábito.</string>
    <string name="please_add_at_least_one_day">Por favor agregue al menos un día</string>
    <string name="please_add_at_least_one_step">Por favor agregue al menos un paso</string>
    <string name="routine_created">Hábito creado</string>
    <string name="routine_updated">Hábito actualizado</string>
    <string name="routine_deleted">Hábito eliminado</string>
    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="a_password_reset_link_is_sent_to_your_email">Se envía un enlace para restablecer la contraseña a su correo electrónico</string>
    <string name="email_is_empty">¡El correo electrónico está vacío!</string>
    <string name="email_is_not_valid">¡El correo no es válido!</string>
    <string name="languages">Idiomas</string>
    <string name="password_is_empty">¡La contraseña está vacía!</string>
    <string name="become_a_pro_member">Conviértete en miembro profesional</string>
    <string name="_1_99_month">1,99€ / mes</string>
    <string name="_9_99_month">9,99€ / año</string>
    <string name="start_routine">Iniciar rutina</string>
    <string name="startx">Habitrac</string>
    <string name="steps"> pasos</string>
    <string name="step"> paso</string>
    <string name="you_already_finish_all_task">Ya terminaste toda la tarea.</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="do_you_really_want_to_logout">¿Realmente quieres cerrar sesión?</string>
    <string name="select_which_describes_you">Selecciona cuál te describe</string>
    <string name="create_account">Crear una cuenta</string>
    <string name="_1_swipe_the_routine_card_to_the_side_n2_tap_on_duplicate_routine_n3_confirm">1. Desliza la tarjeta de rutina hacia un lado\n2. Toca \'duplicar rutina\'\n3. Confirmar</string>
    <string name="i_m_having_problems_wih_the_notifications">Estoy teniendo problemas con las notificaciones</string>
    <string name="how_to_edit_a_routine">¿Cómo editar una rutina?</string>
</resources>