<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.EditRoutineActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/toolbar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnb"
                android:text="@string/name"
                android:textColor="@color/dark"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/routine_name"
                android:textColorHint="@color/grey"
                app:boxBackgroundColor="@color/border"
                app:boxCornerRadiusBottomEnd="10sp"
                app:boxCornerRadiusBottomStart="10sp"
                app:boxCornerRadiusTopEnd="10sp"
                app:boxCornerRadiusTopStart="10sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="35"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnb" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnb"
                android:text="@string/create_new_steps"
                android:textColor="@color/dark"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/airbnb"
                android:text="@string/pick_from_library_of_steps_or_create_a_custom_step"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/totalTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/baloo"
                android:gravity="end"
                android:visibility="gone"
                android:text="Total time 00:22h"
                android:textColor="@color/light"
                android:textSize="16sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/stepsRC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/addSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:cardBackgroundColor="@color/text"
                app:cardCornerRadius="12sp"
                app:cardElevation="0dp"
                app:strokeColor="@color/light"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="12sp">

                    <ImageView
                        android:id="@+id/addIco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/round_add_24"
                        app:tint="@color/light" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnb"
                android:text="@string/add_context"
                android:textColor="@color/dark"
                android:layout_marginTop="10sp"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:fontFamily="@font/airbnb"
                android:text="@string/pick_from_library_or_create_a_custom"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/context"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/wake_up_in_the_morning"
                android:textColorHint="@color/grey"
                app:boxBackgroundColor="@color/border"
                app:boxCornerRadiusBottomEnd="10sp"
                app:boxCornerRadiusBottomStart="10sp"
                app:boxCornerRadiusTopEnd="10sp"
                app:boxCornerRadiusTopStart="10sp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:hintEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/addContext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/airbnb" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnb"
                android:text="@string/days"
                android:textColor="@color/dark"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/monday"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/monday"
                    android:textSize="16sp"
                    app:checkedIconEnabled="true"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/tuesday"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/tuesday"
                    android:textSize="16sp"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wednesday"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/wednesday"
                    android:textSize="16sp"
                    app:checkedIconEnabled="true"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/thursday"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/thursday"
                    android:textSize="16sp"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/friday"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/friday"
                    android:textSize="16sp"
                    app:checkedIconEnabled="true"
                    app:chipIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sat"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/saturday"
                    android:textSize="16sp"
                    app:checkedIconEnabled="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sun"
                    style="@style/ChipsColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sunday"
                    android:textSize="16sp"
                    app:checkedIconEnabled="true" />

            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/airbnb"
                android:text="@string/reminder_timer"
                android:textColor="@color/dark"
                android:textSize="16sp" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/addReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                app:cardBackgroundColor="@color/text"
                app:cardCornerRadius="12sp"
                app:cardElevation="0dp"
                app:strokeColor="@color/light"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="12sp">

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/airbnb"
                        android:text="@string/add_time"
                        android:textColor="@color/light"
                        android:gravity="center"
                        android:textSize="16sp" />


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:layout_marginEnd="12sp"
        android:layout_marginBottom="12sp"
        android:fontFamily="@font/airbnb"
        android:text="@string/update"
        android:textColor="@color/text_white"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>